archived_docs/versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/rotate-encryption-key.adoc
= Encryption Key Rotation
:page-languages: [en, zh]
:revdate: 2025-03-04
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-clusters/rotate-encryption-key.adoc 
:product-path: cluster-admin/manage-clusters/rotate-encryption-key.adoc
:experimental:

== RKE1 Encryption Key Rotation

. Enable encryption key rotation with either of the following two options:
** Select the `Enabled` radio button in the Rancher UI under menu:Cluster Options[Advanced Options > Secrets Encryption]:
+
image::rke1-enable-secrets-encryption.png[Enable Encryption Key Rotation]
** OR, apply the following YAML:
+
[,yaml]
----
 rancher_kubernetes_engine_config:
   services:
     kube_api:
       secrets_encryption_config:
         enabled: true
----
. Rotate keys in the Rancher UI:
+
2.1. Click *☰ > Cluster Management*.
+
2.2. Select *⋮ > Rotate Encryption Keys* on the far right of the screen next to your chosen cluster:
+
image::rke1-encryption-key.png[Encryption Key Rotation]

== {rke2-product-name} Encryption Key Rotation

_*New in v2.6.7*_

IMPORTANT: Encryption key rotation is enabled by default and cannot be disabled.

To rotate keys in the Rancher UI:

. Click *☰ > Cluster Management*.
. Select *⋮ > Rotate Encryption Keys* on the far right of the screen next to your chosen cluster:
+
image::rke2-encryption-key.png[Encryption Key Rotation]

NOTE: For more information on RKE2 secrets encryption config, please see the https://documentation.suse.com/cloudnative/rke2/latest/en/security/secrets_encryption.html[RKE2 docs].
